--- a/src/FcScorchedEarth/FcScorchedEarth.fsproj
+++ b/src/FcScorchedEarth/FcScorchedEarth.fsproj
@@ -58,6 +58,7 @@
     <Compile Include="Geometry.fs" />
     <Compile Include="Physics.fs" />
     <Compile Include="TriangleSprite.fs" />
+    <Compile Include="Terrain.fs" />
     <Compile Include="Domain.fs" />
     <Compile Include="DomainTransitions.fs" />
     <Compile Include="Keyboard.fs" />
